feat: implementar torrent integrado
